--- a/index.htm
+++ b/index.htm
@@ -177,7 +177,7 @@
       <h3>SafeEarn</h3>
       <h4 class="subtitle-main"> <b>The 1st Safemoon Yield Generation token</b></h4>
       <p class="mid-txt">
-        Simply hold your $SAFEARN to earn SAFEMOON. This generates what we call <b>Double Reflection</b> since the original SafeMoon reflection works in parallel, you will earn way more profits than you have every imagined. <br/>
+        Simply hold your $SAFEARN to earn SAFEMOON. This generates what we call <b>Double Reflection</b> since the original SafeMoon reflection works in parallel, you will earn way more profits than you have ever imagined. <br/>
         We have added many features to keep SafeEarn's health and longevity, such as multiple Buy-Back Systems, and an Anti-Whale system.
         You can <a href="#why"> Read more about it here</a> !
       </p>
