--- a/index.htm
+++ b/index.htm
@@ -542,22 +542,22 @@
             </li>
             <li class="list-inline-item">
               <a class="btn btn-primary btn-circle btn-circle-sm" href="https://twitter.com/safearnBSC" target="_blank"><i
-                  class="fab fa-telegram-plane"></i></a>
+                  class="fab fa-twitter"></i></a>
             </li> 			
             
-            
-<!--					<li class="list-inline-item">
-						<button class="btn btn-primary btn-circle btn-circle-sm"><i class="fab fa-linkedin-in"></i></button>
-					</li> -->
             <li class="list-inline-item">
-              <a class="btn btn-primary btn-circle btn-circle-sm" href="https://t.me/safe_earn" target="_blank"><i
+              <a class="btn btn-secondary btn-circle btn-circle-sm" href="https://t.me/safe_earn" target="_blank"><i
                   class="fab fa-telegram-plane"></i></a>
             </li>
 
             <li class="list-inline-item">
-              <a class="btn btn-primary btn-circle btn-circle-sm" href="https://twitter.com/safearnBSC" target="_blank"><i
-                  class="fab fa-telegram-plane"></i></a>
-            </li> 		
+              <a class="btn btn-tertiary btn-circle btn-circle-sm" href="https://www.reddit.com/r/SafeEarn/" target="_blank"><i
+                  class="fab fa-reddit-alien"></i></a>
+            </li> 	
+            <li class="list-inline-item">
+              <a class="btn btn-secondary btn-circle btn-circle-sm" href="mailto:dev@safearn.app" target="_blank"><i
+                  class="fas fa-envelope"></i></a>
+            </li> 	
           </ul>
 
         </div>
