--- a/index.htm
+++ b/index.htm
@@ -472,7 +472,7 @@
       <div class="row">
         <div class="col-lg-12 text-center" style="color: white">
           <h2 class="section-title-2">Roadmap</h2>
-          <h3 class="section-subheading my-4">This is a placeholder roadmap! We have LOTS of things not announced here, we're working hard to update the roamdap with all our plans SOON! </h3>
+          <h3 class="section-subheading my-4" style="max-width: 60%; margin:0 auto">This is a placeholder roadmap! We have LOTS of things not announced here, we're working hard to update the roamdap with all our plans SOON! </h3>
         </div>
       </div>
       <div class="row">
