--- a/index.htm
+++ b/index.htm
@@ -123,7 +123,7 @@
           <h1> SafeEarn </h1>
           <h2> 1st SafeMoon Yield Generation Token </h2>
           <h2 style="color: #9c50ff;"> <a target="_blank" href="https://safe-earn-dapp.web.app/">
-            <b><span style="text-decoration: underline!important">dApp</span> IS OUT!</b>
+            <b>dApp <span style="text-decoration: underline!important"> IS OUT! </span></b>
           </a></h2>
           <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4 mt-4 mt-md-0"
             data-custom="buy-btn" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
