--- a/index.htm
+++ b/index.htm
@@ -170,7 +170,7 @@
         </div>
         <div class="coin__back"></div>
         <div class="coin__shadow"></div>
-        </div>
+        </div>xr
       
     </div>
 
@@ -178,10 +178,16 @@
 
       <h3>SafeEarn</h3>
       <h4 class="subtitle-main"> <b>The 1st Safemoon Yield Generation token</b></h4>
-      <p class="mid-txt">
-        Simply hold your $SAFEARN to earn SAFEMOON. This generates what we call <b>Double Reflection</b> since the original SafeMoon reflection works in parallel, you will earn way more profits than you have ever imagined. <br/>
-        We have added many features to keep SafeEarn's health and longevity, such as multiple Buy-Back Systems, and an Anti-Whale system.
-        You can <a href="#why"> Read more about it here</a> !
+      <p class="mid-txt mb-3">
+        Simply hold your SAFEARN to earn double reflections on your SAFEMOON. (+8.5%) 
+        This generates <b>Double Reflection </b>, as the original SafeMoon reflection works in parallel,</b><br/>
+         
+        <div class="svg-back-1 squre-round ">
+        <h3 class="section-title-2 " style="font-size: 1.3rem; text-align: center; color:white">
+          <b style="color:#4febfb; font-size:4rem; font-family:'Montserrat' ">13.5%</b>  Total <br/>Moon Reflections! 
+        </h3>
+        </div>
+        We also have some cool features to keep the token healthy <a class="link" href="#why"> Read more about it here</a> !
       </p>
       <hr class="d-md-none"/>
       <ul class="list token-info-head">
@@ -218,7 +224,7 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Features</h2>
+        <h2>Our system</h2>
         <p class="section-title">Main Features</p>
       </div>
 
