--- a/index.htm
+++ b/index.htm
@@ -170,7 +170,7 @@
         </div>
         <div class="coin__back"></div>
         <div class="coin__shadow"></div>
-        </div>xr
+        </div>
       
     </div>
 
@@ -224,7 +224,7 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Our system</h2>
+        <h2>Our </h2>
         <p class="section-title">Main Features</p>
       </div>
 
