--- a/index.htm
+++ b/index.htm
@@ -122,7 +122,7 @@
         <div class="hero-text">
           <h1> SafeEarn </h1>
           <h2> 1st SafeMoon Yield Generation Token </h2>
-          <h2 style="color: #9c50ff;"> <a target="_blank" href="https://safe-earn-dapp.web.app/">
+          <h2 style="color: #9c50ff;"> <a target="_blank" href="https://www.safearn.app/">
             <b>dApp <span style="text-decoration: underline!important"> IS OUT! </span></b>
           </a></h2>
           <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4 mt-4 mt-md-0"
