--- a/china.htm
+++ b/china.htm
@@ -69,7 +69,7 @@
 
         
           <li class="nav-item ml-4">
-            <a target="_blank" class="btn btn-secondary" href="https://t.me/safe_earn_china"
+            <a target="_blank" class="btn btn-secondary" href="https://t.me/china_earn_china"
               style="margin-top: 15px"><i class="fab fa-telegram"></i></a>
           </li>
 
@@ -113,7 +113,7 @@
        <h1> SafeEarn </h1>
         <h2> 第一个Safemoon静态奖金+自动提升+Zeus回购代币。 </h2>
         <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff" target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> 购买</span> </a>
-        <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" target="_blank" href="https://t.me/safe_earn_china"><i class="fab fa-telegram-plane fa-lg"></i> <span class="ml-3"> TELEGRAM </span> </a>
+        <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" target="_blank" href="https://t.me/china_safe_earn"><i class="fab fa-telegram-plane fa-lg"></i> <span class="ml-3"> TELEGRAM </span> </a>
       </div>
     </div>
 	 </div>
@@ -381,7 +381,7 @@
 						<button class="btn btn-primary btn-circle btn-circle-sm"><i class="fab fa-linkedin-in"></i></button>
 					</li> -->
 					<li class="list-inline-item">
-						<a class="btn btn-primary btn-circle btn-circle-sm" href="https://t.me/safe_earn_china" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+						<a class="btn btn-primary btn-circle btn-circle-sm" href="https://t.me/china_safe_earn" target="_blank"><i class="fab fa-telegram-plane"></i></a>
 					</li>
 					</ul>
 
@@ -391,7 +391,7 @@
         <a class="btn btn-primary btn-circle floating-icon ico-2" href="https://safearn.money/presale/china.html" target="_blank">
           <i class="fas fa-dollar-sign fa-2x"></i>
         </a>
-        <a class="btn btn-secondary btn-circle floating-icon" href="https://t.me/safe_earn_china" target="_blank">
+        <a class="btn btn-secondary btn-circle floating-icon" href="https://t.me/china_safe_earn" target="_blank">
           <i class="fab fa-telegram-plane fa-2x"></i>
         </a>
        
