--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
-    content="SafeEarn is the 1st ever Safemoon static rewards + AutoBoost + Zeus Buy-Back token. Best of all tokens, in one!">
+    content="SafeEarn is the 1st ever Safemoon rewards token: Simply HODL SAFEARN, and earn SAFEMOON. We also have some goodies like AutoBoost + Zeus Buy-Back token. Best of all tokens, in one!">
 
 
 
@@ -17,7 +17,7 @@
   <meta property="og:site_name" content="Safe Earn" />
   <meta property="og:type" content="website" />
   <meta property="og:description"
-    content="SafeEarn is the 1st ever Safemoon static rewards + AutoBoost + Zeus Buy-Back token. Best of all tokens, in one!" />
+    content="SafeEarn is the 1st ever Safemoon rewards token: Simply HODL SAFEARN, and earn SAFEMOON. We also have some goodies like AutoBoost + Zeus Buy-Back token. Best of all tokens, in one!" />
 
   <link href="img/logo-2.png" rel="icon">
 
@@ -142,11 +142,11 @@
 
         <div class="personal-text">
 
-          <h3>Safe Earn</h3>
-          <h2 class="subtitle-main"> <b>The 1st Safemoon Yield Generation token</b></h2>
+
+          <h3> Hold <b>SafeEarn</b>, earn <b>SafeMoon</b></h2>
           <p class="mid-txt mb-3">
-            Simply hold your SAFEARN to earn reflections in SAFEMOON.
-            This generates <b>Double Reflection </b>, as the original SafeMoon reflection works in parallel</b><br/>
+            SafeEarn is the First Hyper-Deflationary, Self-Sustaining, Auto Reimbursing, Safemoon Rewarding Token.
+            The original SafeMoon reflection works in parallel to SafeEarn's, generating what we call <b>Double Reflection </b><br/>
             
             <div class="svg-back-1 squre-round ">
             <h3 class="section-title-2 " style="font-size: 1.3rem; text-align: center; color:white">
