--- a/index.htm
+++ b/index.htm
@@ -144,8 +144,8 @@
 
 
           <h3> Hold <b>SafeEarn</b>, earn <b>SafeMoon</b></h2>
+            <h4> SafeEarn is the First Hyper-Deflationary, Self-Sustaining, Auto Reimbursing, Safemoon Rewarding Token. <br/> </h4>
           <p class="mid-txt mb-3">
-            SafeEarn is the First Hyper-Deflationary, Self-Sustaining, Auto Reimbursing, Safemoon Rewarding Token.
             The original SafeMoon reflection works in parallel to SafeEarn's, generating what we call <b>Double Reflection </b><br/>
             
             <div class="svg-back-1 squre-round ">
@@ -224,9 +224,11 @@
 
           <div class="col-md-4 d-flex justify-content-around flex-column">
 
-            <a class="btn btn-primary btn-block text-uppercase py-4"
+            <a class="btn btn-primary btn-block d-flex align-items-center justify-content-center btn-outline-2 text-uppercase py-4"
               data-custom="buy-btn" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
-              target="_blank"><i class="fa fa-exchange fa-2x"></i><span class="ml-3 "></span> Get SAFEARN</span> </a>
+              target="_blank">
+              <i class="fa fa-exchange fa-2x"></i><span class="ml-3 "></span> Get SAFEARN</span> 
+            </a>
               <div class="d-flex flex-row mt-4">
 
                   <a class="btn btn-outline btn-block text-uppercase mr-2 mt-0" target="_blank"
