--- a/index.htm
+++ b/index.htm
@@ -336,7 +336,7 @@
           <h1> One dApp to rule them all! </h1>
           <p>
             Our platform is not only about a token, we have also created a <b>dApp</b>.<br/>
-            This allows our holders to see their <b>Total Safemoon reflections, and manually claim them</b> if they're impatient, but this is just is our first step towards a more X product <br/> <br/>
+            This allows our holders to see their <b>Total Safemoon reflections, and manually claim them</b> if they're impatient, but this is just is our first step towards a more extensive product <br/> <br/>
             We will continue to expand our dApp, regularly adding new functionalities and providing more value, <b>not only for SafeEarn holders, but everyone on the BSC! </b>
 
           </p>
