--- a/index.htm
+++ b/index.htm
@@ -327,7 +327,7 @@
     </div>
 
     <div class="container-fluid gradient-bg no-border dapp-showcase">
-      <div class="row d-flex justify-content-around">
+      <div class="row d-flex justify-content-around align-items-start">
         <div class="col-md-5 img-container mb-5 mb-md-0">
           <img src="/img/dapp-screenshot.png"/>
         </div>
@@ -335,8 +335,8 @@
         <div class="col-md-5 dapp-detail">
           <h1> One dApp to rule them all! </h1>
           <p>
-            Our platform is not only about a token, we have also created a <b>dApp</b>.<br/>
-            This allows our holders to see their <b>Total Safemoon reflections, and manually claim them</b> if they're impatient, but this is just is our first step towards a more extensive product <br/> <br/>
+            Our platform is not only about a token, we have also created a proprietary <b>dApp (Decentralized App)</b>.<br/>
+            This allows our holders to see their <b>Total Safemoon reflections, and manually claim them</b> if they're impatient, but this is just is our first step towards a more extensive product. <br/> <br/>
             We will continue to expand our dApp, regularly adding new functionalities and providing more value, <b>not only for SafeEarn holders, but everyone on the BSC! </b>
 
           </p>
