--- a/index.htm
+++ b/index.htm
@@ -696,7 +696,16 @@
   <script src="src/act.js"></script>
 
   <script src="src/script.js"></script>
-
+  
+  <script type="text/javascript">
+    window._mfq = window._mfq || [];
+    (function() {
+      var mf = document.createElement("script");
+      mf.type = "text/javascript"; mf.defer = true;
+      mf.src = "//cdn.mouseflow.com/projects/ef7208cc-0527-4792-9ebc-efb1aef14313.js";
+      document.getElementsByTagName("head")[0].appendChild(mf);
+    })();
+  </script>
 
 
 </body>
