--- a/index.htm
+++ b/index.htm
@@ -74,7 +74,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item ml-4">
-            <a target="_blank" class="btn btn-primary"
+            <a target="_blank" class="btn btn-tertiary"
               data-custom="buy-btn" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
               style="margin-top: 15px">BUY</a>
           </li>
