--- a/index.htm
+++ b/index.htm
@@ -158,7 +158,7 @@
             </div>
 
             <p class="mid-txt mt-1">
-              <b>SafeMoon's Reflection</b> works alongside <b> SafeEarn's Reflection </b>, generating more than from <b>2x-5x profits vs only holding Safemoon*</b></p>  
+              <b>SafeMoon's Reflection</b> works alongside <b> SafeEarn's Reflection</b>, generating between <b>2x-5x profits </b>compared to only holding <b>Safemoon*</b></p>  
               </p>
             
             
