Discord logo color adjustment

--- a/index.htm
+++ b/index.htm
@@ -88,7 +88,7 @@
 
 
           <li class="nav-item ml-4">
-            <a target="_blank" class="btn btn-secondary" href="https://discord.gg/EpVrASXnzG"
+            <a target="_blank" class="btn btn-discord" href="https://discord.gg/EpVrASXnzG"
                style="margin-top: 15px"><i class="fab fa-discord"></i></a>
           </li>
 
