--- a/index.htm
+++ b/index.htm
@@ -265,7 +265,7 @@
               Earn automatic <b>$SAFEMOON</b> rewards just by HODLING your <b>SafeEarn</b> - <br/>
               You will receive it automatically in your wallet, and you can manually claim it in our 
               <a href="https://safearn.app" target="_blank" style="color:#6edeef; text-decoration: underline;">dApp</a> <br/>
-              This also means that the native reflection of Safemoon works in paralell.
+              This also means that the native reflection of Safemoon works in parallel.
               Exponentially increase your bags 🚀
             </p>
           </span>
