--- a/index.htm
+++ b/index.htm
@@ -625,7 +625,7 @@
               <p>
                 We have decided not to dox ourselves for the time being. Crypto can be a very emotional place, where people at loss might do bad things to the token's creators. <br/>
               </p>
-              <h4 class="mt-3">Having said this, we'd like to talk about our previous actions that will definitelly earn your trust. </h4>
+              <h4 class="mt-3">Having said this, we'd like to talk about our previous actions that will definitely earn your trust. </h4>
               <p>
                 This token launched under what we call the "v1" nowadays, made by a solo dev who was inexperienced, the token got out-whaled and was ruined for the majority of users. <br/>
                 Instead of running away from the hate messages with a 250+ BNB dev wallet (filled from Marketing fees), it was decided to join forces with another team working on similar token, and merge our efforts. <br/>
