--- a/index.htm
+++ b/index.htm
@@ -152,19 +152,19 @@
           <h3> SAFELY <b>BACK</b> TO THE <b>MOON</b></h2>
             <h4> SafeEarn brings passive income for holders, powered by the one and only SafeMoon. </h4>
           <p class="mid-txt mb-0">
-            1~of-a-kind ~ Hyper-Deflationary, Self-Sustaining, AutoBoosted, SAFEMOON Rewards Token.
+            Unique Hyper-Deflationary, Self-Sustaining, AutoBoosted, SafeMoon Rewards Token.
             </p>
 
 
             <div class="squre-round ">
               <h3 class="section-title-main">
                 <b style="">5x - 10x</b>  <br/>
-                More SafeMoon Reflections!
+                More SafeMoon Reflections
               </h3>
             </div>
 
             <p class="mid-txt mt-1 mb-1">
-              <b>SafeMoon's Reflection</b> works alongside SAFEARN's Reflection, generating between <b>5x-10x profits </b>compared to only holding SFM*
+              <b>SafeMoon's Reflection</b> works alongside Safearn's Reflection, generating between <b>5x-10x profits </b>compared to only holding SFM*
 
             </p>  
 
@@ -262,10 +262,10 @@
           <span>
             <h3> Double Reflection</h3>
             <p>
-              Earn automatic <b>$SAFEMOON</b> rewards just by HODLING your <b>SafeEarn</b> - <br/>
+              Earn automatic <b>SafeMoon</b> rewards just by holding your <b>SafeEarn</b> - <br/>
               You will receive it automatically in your wallet, and you can manually claim it in our 
-              <a href="https://safearn.app" target="_blank" style="color:#6edeef; text-decoration: underline;">dApp</a> <br/>
-              This also means that the native reflection of Safemoon works in paralell.
+              <a href="https://safearn.app" target="_blank" style="color:#6edeef; text-decoration: underline;">dApp Dashboard</a> <br/>
+              This means that the native reflection of Safemoon works in paralell.
               Exponentially increase your bags 🚀
             </p>
           </span>
