people be people-in

--- a/index.htm
+++ b/index.htm
@@ -387,7 +387,7 @@
           <h1> Safe dApp for everyone  </h1>
           <p>
             It's not all about $SAFEARN, we are also actively creating our own propietary <b>dApp (Decentralized App)</b>.<br/>
-            This currently allows our holders to see their <b>Total Safemoon reflections + manually claim them</b> if they're impatient.
+            This currently allows our holders to see their <b>Total Safemoon reflections + manually claim them</b> if they're looking to get those rewards early!
             <h3 class="mt-5">1 Step towards an extensive Platform </h3>
             We will continue to expand our dApp, regularly adding new functionalities and providing more value, <b>not only for SafeEarn holders, but everyone on the BSC! </b>
 
